tests/snapshots/runner__command_types.snap
---
source: tests/runner.rs
expression: types
---
[
    Type {
        name: "std::sys::unix::process::process_common::Command",
        size: 208,
        align: 8,
        kind: Struct(
            StructType {
                items: [
                    Field(
                        Field {
                            name: ".env",
                            size: 32,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".cwd",
                            size: 16,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".groups",
                            size: 16,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".program",
                            size: 16,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".args",
                            size: 24,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".argv",
                            size: 24,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".closures",
                            size: 24,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".stdin",
                            size: 8,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".stdout",
                            size: 8,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".stderr",
                            size: 8,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".uid",
                            size: 8,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".gid",
                            size: 8,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".pgroup",
                            size: 8,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".program_kind",
                            size: 1,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".saw_nul",
                            size: 1,
                            align: None,
                            offset: None,
                        },
                    ),
                    Field(
                        Field {
                            name: ".create_pidfd",
                            size: 1,
                            align: None,
                            offset: None,
                        },
                    ),
                ],
            },
        ),
        end_padding: Some(
            5,
        ),
    },
]
