tests/snapshots/runner__compiler_messages_types.snap
---
source: tests/runner.rs
expression: types
---
[
    Type {
        name: "{async fn body of run()}",
        size: 7880,
        align: 8,
        kind: Enum(
            EnumType {
                discriminant_size: Some(
                    1,
                ),
                variants: [
                    EnumVariant {
                        name: "Unresumed",
                        size: 592,
                        items: [
                            Field(
                                Field {
                                    kind: Upvar,
                                    name: "self",
                                    size: 568,
                                    align: Some(
                                        8,
                                    ),
                                    offset: Some(
                                        0,
                                    ),
                                    local_type: None,
                                },
                            ),
                            Field(
                                Field {
                                    kind: Upvar,
                                    name: "drain",
                                    size: 24,
                                    align: None,
                                    offset: None,
                                    local_type: None,
                                },
                            ),
                        ],
                    },
                    EnumVariant {
                        name: "Suspend0",
                        size: 7879,
                        items: [
                            Field(
                                Field {
                                    kind: Upvar,
                                    name: "self",
                                    size: 568,
                                    align: Some(
                                        8,
                                    ),
                                    offset: Some(
                                        0,
                                    ),
                                    local_type: None,
                                },
                            ),
                            Field(
                                Field {
                                    kind: Upvar,
                                    name: "drain",
                                    size: 24,
                                    align: None,
                                    offset: None,
                                    local_type: None,
                                },
                            ),
                            Field(
                                Field {
                                    kind: GeneratorLocal,
                                    name: "self",
                                    size: 568,
                                    align: None,
                                    offset: None,
                                    local_type: None,
                                },
                            ),
                            Padding(
                                1,
                            ),
                            Field(
                                Field {
                                    kind: GeneratorLocal,
                                    name: "coroutine_field3",
                                    size: 1,
                                    align: Some(
                                        1,
                                    ),
                                    offset: None,
                                    local_type: Some(
                                        "bool",
                                    ),
                                },
                            ),
                            Padding(
                                6,
                            ),
                            Field(
                                Field {
                                    kind: GeneratorLocal,
                                    name: "__awaitee",
                                    size: 6712,
                                    align: Some(
                                        8,
                                    ),
                                    offset: None,
                                    local_type: Some(
                                        "{async fn body of run()}",
                                    ),
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
        end_padding: None,
    },
]
