tests/snapshots/runner__control_flow_types.snap
---
source: tests/runner.rs
expression: types
---
[
    Type {
        name: "std::ops::ControlFlow<std::option::Option<std::convert::Infallible>, alloc::collections::btree::navigate::LazyLeafHandle<alloc::collections::btree::node::marker::Dying, std::ffi::OsString, std::option::Option<std::ffi::OsString>>>",
        size: 32,
        align: 8,
        kind: Enum(
            EnumType {
                discriminant_size: None,
                variants: [
                    EnumVariant {
                        name: "Continue",
                        size: 32,
                        items: [
                            Field(
                                Field {
                                    kind: AdtField,
                                    name: "0",
                                    size: 32,
                                    align: None,
                                    offset: None,
                                },
                            ),
                        ],
                    },
                    EnumVariant {
                        name: "Break",
                        size: 0,
                        items: [
                            Field(
                                Field {
                                    kind: AdtField,
                                    name: "0",
                                    size: 0,
                                    align: None,
                                    offset: None,
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
        end_padding: None,
    },
]
